# School-Projects

./: README.md
Battle Simulator/: CMakeLists.txt  Monster.cpp  Monster.h  Player.cpp  Player.h  main.cpp
CardOrdering/: Card.c  Card.h  CardOrdering.c  CardOrdering.docx  CardOrdering.sln  CardOrdering.vcxproj  OrderedCards.txt  RandomCards.txt
HospitalLab/: CMakeLists.txt  Hospital.c  Hospital.sln  Hospital.vcxproj  OrderedPatients.txt  Patient.h  RandomPatients.txt
Lab4/: integers.txt  lab4--- question1.cpp  lab4--- question2.cpp  lab4--- question3.cpp  lab4--- question4.cpp
LabExam3/: CMakeLists.txt  Car.cpp  Car.h  FormulaCar.cpp  FormulaCar.h  Main.cpp  Motorcycle.cpp  Motorcycle.h  RacingVehicle.cpp  RacingVehicle.h  Track.cpp  Track.h
MusicBoxLab/: Music.c  Music.h  MusicBox.c  MusicBox.sln  MusicBox.vcxproj  Song.txt  tempCodeRunnerFile.c
OOSD/: 12-TicTacToe-OO.css  12-TicTacToe-OO.html  12-TicTacToe-OO.js
SpaceShipLab/: CMakeLists.txt  Planet.cpp  Planet.h  Spaceship.cpp  Spaceship.h  main.cpp
homework2/: Homework2.vpp.bak_000f  Homework2Class.vpp.bak_000f  homework2Sequnce.vpp
lab5/: lab5.cpp  lab5q2.cpp  lab5q3.cpp
lab6/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  main.cpp
labExam_4/: CMakeLists.txt  Calculator.cpp  InputFile.txt  Operation.cpp  Operation.h  OutputFile.txt  trial.cpp
